styled /browse_tournaments, and cleaned up templating

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -80,7 +80,7 @@
   <hr>
   <div class="container">
   <footer>
-    <b>© 2015 Matchstats | <a href="mailto:matchstats@example.com">matchstats@example.com</a> | Current database version: 38</b>
+    <b>© 2015 SmashStats | <a href="mailto:Smashstats@example.com">Smashstats@example.com</a> | Current database version: 38</b>
   </footer>
   </div>
 
