--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container">
   <header class="jumbotron">
-  <h1>Welcome to Matchstats!</h1>
+  <h1>Welcome to SmashStats!</h1>
   <div><h3><a href="{{url_for("browse_tournaments")}}">Browse Recent Tournaments</a></h3></div>
   </header>
   <hr>
@@ -20,6 +20,7 @@
     <li> added search function for Users into nav bar </li>
     <li> styled search function in nav bar </li>
     <li> search function will also automatically search tournaments by name </li>
+    <li> styled /browse_tournaments, and cleaned up templating </li>
   </ul></div></div>
   </div>
 
