--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -43,26 +43,29 @@
     </tr>
   </table>
   </header>
-  <hr> <!-- theme change -->
+  <hr>
+
   <div class="panel panel-default">
   <div class="panel-heading">
     <h2>{{ user.tag }}'s Set History</h2>
   </div>
+
   <div class="panel-body">
-  <table class="table bootstrap-datatable">
-  <!-- print all items in array user_sets (currently each item is a fake set) -->
-  <thead>
-    <tr>
-    <th>Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for set in user_sets %} <!-- user_sets is variable containing the result of user.getAllSets passed from views -->
-    {% include 'set.html' %}
-  {% endfor %}
-  </tbody>
-  </table>
+    <table class="table bootstrap-datatable">
+      <thead>
+        <tr>
+        <th>Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        {% for set in user_sets %}
+          {% include 'set.html' %}
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
+  
   </div>
 </div>
 {% endblock %}
