overflow text now breaks into new lines. templates improved

--- a/app/static/startbootstrap-heroic-features-1.0.3/css/bootstrap.css
+++ b/app/static/startbootstrap-heroic-features-1.0.3/css/bootstrap.css
@@ -17,6 +17,10 @@ body {
   overflow-y: scroll;
   height: 400px;
 }
+.horizontal-overflow {
+  word-wrap: break-word;
+  max-width: 350px;
+}
 article,
 aside,
 details,
