--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -1,6 +1,6 @@
 <!-- prints Set representation in HTML given a Set object -->
 <tr><h5><b>
-	<td class="col-md-4">
+	<td class="col-md-3">
 		{% if set.tournament %} 
 			<a href="{{url_for("tournament", tournament=set.tournament)}}">{{ set.tournament }}</a>
 		{% else %}
@@ -8,16 +8,16 @@
 		{% endif %}
 	</td>
 
-	<td class="col-md-2 text-right">
+	<td class="col-md-3 text-right horizontal-overflow">
 		<a href="{{url_for("user", tag=set.winner_tag)}}">{{ set.winner_tag }}</a> 
 		[{{ set.winner_score }} - {{ set.loser_score }}]
   </td>
         
-  <td class="col-md-2 text-left">
+  <td class="col-md-3 text-left horizontal-overflow">
 		<a href="{{url_for("user", tag=set.loser_tag)}}">{{ set.loser_tag }}</a> 
 	</td>
 
-	<td class="col-md-4 text-right">
+	<td class="col-md-3 text-right">
   	<a href="{{url_for("head_to_head", tag1=set.winner_tag, tag2=set.loser_tag)}}"> View Head-to-Head</a>
 	</td>
 </b></h5></tr> 
