--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,12 @@
   <h3>Recent Updates</h3>
 
   <div class="col-md-3 col-sm-6 hero-feature">
+  <div class="thumbnail"><div class="caption scroll400"><h5> July 4, 2015 </h5>
+  <ul>
+    <li> overflow text now breaks into new lines. templates improved </li>
+  </ul>
+
+  <div class="col-md-3 col-sm-6 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 3, 2015 </h5>
   <ul>
     <li> added page /browse_tournaments to display list of tournaments routing to their display pages /tournament </li>
