--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,9 @@
   <div class="thumbnail"><div class="caption scroll400"><h5> July 4, 2015 </h5>
   <ul>
     <li> overflow text now breaks into new lines. templates improved </li>
-  </ul>
+    <li> Set.tournament now assigned "Non-Tourney" if no tourney name given </li>
+  </ul></div></div>
+  </div>
 
   <div class="col-md-3 col-sm-6 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 3, 2015 </h5>
