--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -1,21 +1,21 @@
 <!-- prints Set representation in HTML given a Set object -->
 <tr><h5><b>
-	<td class="col-md-3">
-		{% if set.tournament %} 
+	<td class="col-md-3"><b>
+		{% if set.tournament != "Non-Tourney" %}
 			<a href="{{url_for("tournament", tournament=set.tournament)}}">{{ set.tournament }}</a>
 		{% else %}
-			Non-Tourney 
+			{{ set.tournament }}
 		{% endif %}
-	</td>
+	</b></td>
 
-	<td class="col-md-3 text-right horizontal-overflow">
+	<td class="col-md-3 text-right horizontal-overflow"><b>
 		<a href="{{url_for("user", tag=set.winner_tag)}}">{{ set.winner_tag }}</a> 
 		[{{ set.winner_score }} - {{ set.loser_score }}]
-  </td>
+  </b></td>
         
-  <td class="col-md-3 text-left horizontal-overflow">
+  <td class="col-md-3 text-left horizontal-overflow"><b>
 		<a href="{{url_for("user", tag=set.loser_tag)}}">{{ set.loser_tag }}</a> 
-	</td>
+	</b></td>
 
 	<td class="col-md-3 text-right">
   	<a href="{{url_for("head_to_head", tag1=set.winner_tag, tag2=set.loser_tag)}}"> View Head-to-Head</a>
