--- a/app/static/enno/css/style.css
+++ b/app/static/enno/css/style.css
@@ -11,7 +11,7 @@ body {
 	font-weight:300;
 	line-height:1.6em;
 	color:#333;
-	background-color:#24234B;
+	background-color:#1E243A;
 }
 
 hi,h2,h3,h4,h5,h6 {
@@ -48,7 +48,7 @@ hr {
   line-height: 20px;
 }
 a.navbar-brand span {
-	color:#fff;
+	color:#631018;
 	font-size:35px;	
 }
 
