--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='enno/css/style.css') }}">
 
 <!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='enno/css/bootstrap-theme.css') }}">
 
 <link rel="stylesheet" href="{{ url_for('static', filename='startbootstrap-heroic-features-1.0.3/css/heroic-features.css') }}">
 
@@ -13,7 +13,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 <!-- Base template begins -->
-
 <html>
   <head>
     {% if title %}
