--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
     <li> Set.tournament now assigned "Non-Tourney" if no tourney name given </li>
     <li> remodeled /search_results page to display results in table </li>
     <li> changed bootstrap styles, and added some colors </li>
+    <li> added more coloring and styling </li>
   </ul></div></div>
   </div>
 
