--- a/app/templates/browse_users.html
+++ b/app/templates/browse_users.html
@@ -4,7 +4,7 @@
 <div class="container">
 	<div class="panel panel-default">
 	<div class="panel-heading">
-  	<h2>Browse All Users</h2>
+  	<h2><b>Browse All Users</b></h2>
   </div>
 
   <!-- "Table" Column Titles -->
