--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,14 @@
   <h3>Recent Updates</h3>
 
   <div class="col-md-3 col-sm-6 hero-feature">
+  <div class="thumbnail"><div class="caption scroll400"><h5> July 5, 2015 </h5>
+  <ul>
+    <li> restyled buttons, made tables condensed, fixed footer </li>
+    <li> implemented functions to modularize regex expressions in sanitize </li>
+  </ul></div></div>
+  </div>
+
+  <div class="col-md-3 col-sm-6 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 4, 2015 </h5>
   <ul>
     <li> overflow text now breaks into new lines. templates improved </li>
