--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -12,12 +12,12 @@
   {% else %}
 
   <!-- "Table" Column Titles -->
-  <table class="table bootstrap-datatable">
+  <table class="table bootstrap-datatable table-condensed">
     <thead>
       <tr>
         <th><h4>Results</h4></th>
         <th></th>
-        <th></th>
+        <th></th> 
         <th></th>
       </tr>
     </thead>
