--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -47,7 +47,7 @@
 
   <div class="panel panel-default">
   <div class="panel-heading">
-    <h2>{{ user.tag }}'s Set History</h2>
+    <h2><b>{{ user.tag }}'s Set History</b></h2>
   </div>
 
   <div class="panel-body">
@@ -55,6 +55,9 @@
       <thead>
         <tr>
         <th>Total Sets: {{ user_sets|length }} | Record: [{{user_wins|length}}-{{user_losses|length}}]</th>
+        <th></th>
+        <th></th>
+        <th></th>
         </tr>
       </thead>
 
