--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -5,19 +5,12 @@
 <div class="container">
 	<div class="panel panel-default">
 	<div class="panel-heading">
-		<h2> Browse Tournaments </h2>
+		<h2><b> Browse Tournaments </b></h2>
 	</div>
 
 	<div class="panel-body">
 		<table class="table bootstrap-datatable table-hover">
-			<thead>
-				<tr>
-					<th>
-						Recent Tournaments
-					</th>
-				</tr>
-			</thead>
-
+			
 			<tbody>
 				{% for tournament in tournamentlist %}
 				<tr>
