--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -11,11 +11,11 @@
 
     <div class="row"> 
       <div class="col-md-6">
-        <h2 class="text-left">Player 1</h2>
+        <h2 class="text-left"><b>Player 1</b></h2>
       </div>
 
       <div class="col-md-6">
-        <h2 class="text-right">Player 2</h2>
+        <h2 class="text-right"><b>Player 2</b></h2>
       </div>
     </div>
 
@@ -26,7 +26,7 @@
 
       <div class="col-md-6">
         <!-- Customized button input -->
-        <p class="text-center"><input class="btn btn-primary btn-md" type="submit" value="Look up Head-to-Head"></p>
+        <p class="text-center"><input class="btn-primary form-control" type="submit" value="Look up Head-to-Head"></p>
       </div>
 
       <div class="col-md-3">
@@ -44,8 +44,28 @@
     <!--<h2>Head-to-Head between {{ tag1 }} and {{ tag2 }}</h2>-->
     <div class="panel panel-default">
     <div class="panel-heading">
-      <h2><b> Stats </b></h2>
-    </div>
+      <table class="table bootstrap-datatable table-condensed">
+        <tr>
+          <th class="col-md-3 text-right horizontal-overflow">
+            <h2><b>{{ tag1 }} -</h2></b>
+          </th>
+
+          <th class="col-md-3 text-left horizontal-overflow">
+            <h2><b>{{ tag2 }}</b></h2>
+          </th>
+        </tr>
+
+      <tr>
+        <th class="col-md-3 text-right">
+          <h3><b>{{ user1_set_win_count }} -</b></h3>
+        </div>
+
+        <th class="col-md-3 text-left">
+          <h3><b>{{ user2_set_win_count }}</b></h3>
+        </th>
+      </tr>
+      </table>
+
     <div class="panel-body">
 
     <table class="table bootstrap-datatable">
@@ -96,20 +116,18 @@
 
       <div class="panel panel-default">
       <div class="panel-heading">
-        <h3> Set History </h3>
+        <h3><b> Set History </b></h3>
       </div>
       <div class="panel-body">
-        
+
       <!-- "Table" column names -->
-      <table class="table bootstrap-datatable">
+      <table class="table bootstrap-datatable table-condensed">
         <thead>
           <tr>
             <th>
-              <h4>Tournament</h4>
             </th>
 
-            <th class="text-center">
-              <h4>Result</h4>
+            <th>
             </th>
 
             <th>
