--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -5,7 +5,7 @@
 	<div class="container">
 		<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3>User results for "{{ query }}":</h3>
+			<h3><b>User results for "{{ query }}"</b></h3>
 		</div>
 
 		<div class="panel-body">
@@ -21,7 +21,7 @@
 
 	<div class="panel panel-default">
 	<div class="panel-heading">
-	  <h3>Tournaments named "{{ query }}":</h3>
+	  <h3><b>Tournaments named "{{ query }}"</b></h3>
 	</div>
 
 	<div class="panel-body">
