updated top_player_regex_raw_list to automatically generate regex expressions given top player tag[D

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,10 +12,18 @@
   <h3>Recent Updates</h3>
 
   <div class="col-md-3 col-sm-6 hero-feature">
+  <div class="thumbnail"><div class="caption scroll400"><h5> July 6, 2015 </h5>
+  <ul>
+    <li> updated "top_player_regex_raw_list" to automatically generate regex expressions given top player tags</li>
+  </ul></div></div>
+  </div>
+
+  <div class="col-md-3 col-sm-6 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 5, 2015 </h5>
   <ul>
     <li> restyled buttons, made tables condensed, fixed footer </li>
     <li> implemented functions to modularize regex expressions in sanitize </li>
+    <li> parse_challonge now shouldn't automatically take DQ scores </li>
   </ul></div></div>
   </div>
 
