fixed bug in which parse_challonge.py would break if a DQ score was detected

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
   <div class="col-md-3 col-sm-6 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 6, 2015 </h5>
   <ul>
+    <li> fixed bug in which parse_challonge.py would break if a DQ score was detected </li>
     <li> updated "top_player_regex_raw_list" to automatically generate regex expressions given top player tags</li>
   </ul></div></div>
   </div>
