--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="panel panel-default">
   <div class="panel-heading">
-    <h1> Sets from {{ tournament }} </h1>
+    <h1><b> Sets from {{ tournament }} </b></h1>
   </div>
   <div class="panel-body">
 
@@ -12,15 +12,7 @@
   {% else %}
 
   <!-- "Table" Column Titles -->
-  <table class="table bootstrap-datatable table-condensed">
-    <thead>
-      <tr>
-        <th><h4>Results</h4></th>
-        <th></th>
-        <th></th> 
-        <th></th>
-      </tr>
-    </thead>
+  <table class="table bootstrap-datatable table-condensed table-hover">
 
   	<tbody>
       <!-- display all Set in tournament -->
