--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,8 @@
   <ul>
     <li> fixed bug in which parse_challonge.py would break if a DQ score was detected </li>
     <li> updated "top_player_regex_raw_list" to automatically generate regex expressions given top player tags</li>
+    <li> /browse_users now uses pagination, displaying 25 Users per page </li>
+    <li> implemented page navigation for browse_users.html </li>
   </ul></div></div>
   </div>
 
