readjusted navbar search form size and position

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
     <li> updated "top_player_regex_raw_list" to automatically generate regex expressions given top player tags</li>
     <li> /browse_users now uses pagination, displaying 25 Users per page </li>
     <li> implemented page navigation for browse_users.html </li>
+    <li> readjusted navbar search form size and position </li>
   </ul></div></div>
   </div>
 
