--- a/app/static/enno/css/bootstrap.css
+++ b/app/static/enno/css/bootstrap.css
@@ -2374,10 +2374,10 @@ output {
   /* form font Color */
   color: #1E243A;
   /* form background color */
-  background-color: #fff;
+  background-color: #E8E8E8;
   background-image: none;
   /* form border */
-  border: 1px solid #fff;
+  border: 1px solid #1E243A;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
@@ -4064,10 +4064,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin-bottom: 0;
     vertical-align: middle;
   }
+  /* Navbar Search Form */
   .navbar-form .form-control {
     display: inline-block;
     width: auto;
-    vertical-align: middle;
+    height: 35;
+    vertical-align: bottom;
   }
   .navbar-form .form-control-static {
     display: inline-block;
