--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
     <li> /browse_users now uses pagination, displaying 25 Users per page </li>
     <li> implemented page navigation for browse_users.html </li>
     <li> readjusted navbar search form size and position </li>
+    <li> Unicode characters in tags now parseable in /parse_challonge. __str__ functions for models Set and User now encodes variable non-integer values into Unicode, meaning that model columns now support Unicode strings </li>
   </ul></div></div>
   </div>
 
