regex expressions now recognize different spellings of tags and simple tags

--- a/app/static/enno/css/bootstrap-theme.css
+++ b/app/static/enno/css/bootstrap-theme.css
@@ -82,7 +82,7 @@
 }
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: #265a88;
+  background-color: #CAB566;
   background-position: 0 -15px;
 }
 .btn-primary:active,
