--- a/app/static/enno/css/style.css
+++ b/app/static/enno/css/style.css
@@ -291,7 +291,7 @@ a.navbar-brand span {
 .panel {
 	margin-top:20px;
   margin-bottom: 20px;
-  /* panel body color 8 */
+  /* panel body color */
   background-color: #fff;
   border:#eee 1px solid transparent;
   border-radius: 0;
