--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,9 +55,6 @@
                     <a href="{{ url_for('browse_users') }}">Browse Users</a>
                   </li>
                   <li>
-                    <a href="{{ url_for('browse_regions') }}">Browse Regions</a>
-                  </li>
-                  <li>
                     <a href="{{ url_for('head_to_head') }}">Head to Head</a>
                   </li>
                   <li>
@@ -69,6 +66,10 @@
                   <!-- Not needed currently
                   <li>
                     <a href="{{ url_for('browse_characters') }}">Browse Characters</a>
+                  </li>
+
+                  <li>
+                    <a href="{{ url_for('browse_regions') }}">Browse Regions</a>
                   </li>
                   -->
                 </ul>
@@ -93,7 +94,7 @@
   <hr>
   <div class="container">
     <footer>
-      <b>© 2015 SmashStats | <a style="color: #E8E8E8" href="mailto:smashstats@example.com">smashstats@gmail.com</a> | Current database version: 38</b>
+      <b>© 2015 SmashStats | <a style="color: #E8E8E8" href="mailto:smashstats@example.com">smashstats@gmail.com</a> | Version 0.9</b>
     </footer>
   </div>
 
