--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -21,16 +21,16 @@
 
     <div class="row"> 
       <div class="col-md-3">
-        <p class="text-left">{{ form.user1(size=15, class="form-control") }}</p>
+        <div class="text-left">{{ form.user1(size=15, class="form-control") }}</div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-4 col-md-offset-1">
         <!-- Customized button input -->
-        <p class="text-center"><input class="btn-primary form-control" type="submit" value="Look up Head-to-Head"></p>
+        <div class="text-center"><input class="btn-primary form-control" type="submit" value="Look up Head-to-Head"></div>
       </div>
 
-      <div class="col-md-3">
-        <p class="text-right">{{ form.user2(size=15, class="form-control") }}</p>
+      <div class="col-md-offset-1 col-md-3">
+        <div class="text-right">{{ form.user2(size=15, class="form-control") }}</div>
       </div>
     </div>
 
