working as intended soft fix for unrecognized Tournament names in parse_challonge.py

--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -55,16 +55,16 @@
           </th>
         </tr>
 
-      <tr>
-        <th class="col-md-3 text-right">
-          <h3><b>{{ user1_set_win_count }} -</b></h3>
-        </div>
-
-        <th class="col-md-3 text-left">
-          <h3><b>{{ user2_set_win_count }}</b></h3>
-        </th>
-      </tr>
+        <tr>
+          <th class="col-md-3 text-right">
+            <h3><b>{{ user1_set_win_count }} -</b></h3>
+          </th>
+          <th class="col-md-3 text-left">
+            <h3><b>{{ user2_set_win_count }}</b></h3>
+          </th>
+        </tr>
       </table>
+    </div>
 
     <div class="panel-body">
 
@@ -112,7 +112,7 @@
       </table>
 
       </div>
-      </div>
+    </div>
 
       <div class="panel panel-default">
       <div class="panel-heading">
@@ -121,7 +121,7 @@
       <div class="panel-body">
 
       <!-- "Table" column names -->
-      <table class="table bootstrap-datatable table-condensed">
+      <table class="table bootstrap-datatable table-condensed table-hover">
         <thead>
           <tr>
             <th>
