--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,6 +22,7 @@
     <li> Unicode characters in tags now parseable in /parse_challonge. __str__ functions for models Set and User now encodes variable non-integer values into Unicode, meaning that model columns now support Unicode strings </li>
     <li> regex expressions now recognize different spellings of tags and simple tags </li>
     <li> working as intended soft fix for unrecognized Tournament names in parse_challonge.py </li>
+    <li> expanded recognized top player substrings to MIOM 2014 Top 100 Rankings </li>
   </ul></div></div>
   </div>
 
